--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <title>18Site</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <a class="navbar-brand" href="#">18Site</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
@@ -40,13 +40,39 @@
           </ul>
         </div>
       </nav>
-    <div class="jumbotron">
+    <div class="jumbotron text-white">
         <h1 class="display-4">Aro Aro Aro!</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-danger btn-lg" href="#" role="button">Leer más</a>
       </div>
+      <div class="card-deck m-2">
+        <div class="card">
+          <img src="./img/unnamed.jpg" class="card-img-top" alt="Sabores" style="height: 16rem;">
+          <div class="card-body">
+            <h5 class="card-title">Sabores Dieciocheros</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./img/empanadas-de-pino.jpg" class="card-img-top" alt="Empanada" style="height: 16rem;">
+          <div class="card-body">
+            <h5 class="card-title">Empanada Ganadora</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card" >
+          <img src="./img/home-chicha-curacavi.jpg" class="card-img-top" alt="Chica" style="height: 16rem;">
+          <div class="card-body">
+            <h5 class="card-title">Chicha de hoy</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>      
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
