--- a/index.html
+++ b/index.html
@@ -73,16 +73,27 @@
           </div>
         </div>
       </div>  
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            1 of 2
+      <div class="container m-4 ">
+        <div class="row mt-3">
+          <div class="col-8">
+                <h2>Trompo</h2>
+                <p class="casrd-text">Un trompo es un tipo de peonza que puede girar sobre una punta, sobre la que sitúa su centro gravitatorio de forma perpendicular al eje de giro, y se equilibra sobre un punto gracias a la velocidad angular, que permite el desarrollo del efecto giro.</p>
           </div>
-          <div class="col">
-            2 of 2
+          <div class="col-4">
+            <img src="./img/trompo.jpg" class="card-img-top" alt="Trompo" >
           </div>
         </div>
       </div>
+      <div class="footer mt-5 py-3 bg-primary text-white">
+        <div class="container">
+            <p>Llamanos al +56995780743</p>
+        </div>
+      </div>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=56995780743&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20clases%20."
+      class="whatsapp__float" target="_blank">
+      <i class="fa fa-whatsapp my-float"></i>
+    </a>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
